# discord-ext-voice-recv

./: pyproject.toml  setup.py
discord/ext/voice_recv/: __init__.py  buffer.py  gateway.py  opus.py  reader.py  router.py  rtp.py  silence.py  sinks.py  types.py  utils.py  video.py  voice_client.py
discord/ext/voice_recv/extras/: speechrecognition.py
examples/: recv.py
